fix gap style var

--- a/src/scss/base/elements/_root.scss
+++ b/src/scss/base/elements/_root.scss
@@ -1,7 +1,10 @@
 html {
 	box-sizing: border-box;
 	overflow-x: hidden;
+}
 
+body {
 	/* this doesn't get output if gap setting is turned off, so I'm hacking it into place */
+	/* has to be on body because that's where the spacing presets are */
 	--wp--style--block-gap: var(--wp--preset--spacing--70);
 }
